<resources>
    <string name="app_name">AFunny</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_me">Me</string>
    <string name="interesting_tab">关注</string>
    <string name="recommend_tab">推荐</string>
    <string name="video_tab">视频</string>
    <string name="picture_tab">趣图</string>
    <string name="text_tab">段子</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="header_description">header_description</string>
    <string name="play_count_description">play counts</string>
</resources>
