<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/tab_selector_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_find"
        android:icon="@drawable/tab_selector_topic"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_add"
        android:icon="@null"
        android:title="" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/tab_selector_message"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_info"
        android:icon="@drawable/tab_selector_me"
        android:title="@string/title_me" />

</menu>
