<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp">

    <ImageView
        android:id="@+id/header_image_view"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/header_description"
        android:src="@mipmap/icon_default_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/header_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintBottom_toBottomOf="@id/header_image_view"
        app:layout_constraintStart_toEndOf="@id/header_image_view"
        app:layout_constraintTop_toTopOf="@id/header_image_view" />

    <TextView
        android:id="@+id/description_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_image_view" />

    <SurfaceView
        android:id="@+id/content_surface_view"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description_text_view" />

    <ImageView
        android:id="@+id/play_or_pause_icon_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/icon_video_play"
        app:layout_constraintBottom_toBottomOf="@id/content_surface_view"
        app:layout_constraintEnd_toEndOf="@id/content_surface_view"
        app:layout_constraintStart_toStartOf="@id/content_surface_view"
        app:layout_constraintTop_toTopOf="@id/content_surface_view" />

    <TextView
        android:id="@+id/play_count_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="2000W"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="@id/content_surface_view"
        app:layout_constraintStart_toStartOf="@id/content_surface_view" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_count_description"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="@id/play_count_text_view"
        app:layout_constraintStart_toEndOf="@id/play_count_text_view"
        app:layout_constraintTop_toTopOf="@id/play_count_text_view" />

    <TextView
        android:id="@+id/play_duration_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1:54:33"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="@id/play_count_text_view"
        app:layout_constraintEnd_toEndOf="@id/content_surface_view"
        app:layout_constraintTop_toTopOf="@id/play_count_text_view" />

    <ImageView
        android:id="@+id/upvote_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/icon_post_like"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/content_surface_view" />

    <TextView
        android:id="@+id/upvote_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1.0W"
        app:layout_constraintBottom_toBottomOf="@id/upvote_image_view"
        app:layout_constraintStart_toEndOf="@id/upvote_image_view"
        app:layout_constraintTop_toTopOf="@id/upvote_image_view" />

    <ImageView
        android:id="@+id/downvote_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/icon_post_hate"
        app:layout_constraintBottom_toBottomOf="@id/upvote_image_view"
        app:layout_constraintStart_toEndOf="@id/upvote_text_view"
        app:layout_constraintTop_toTopOf="@id/upvote_image_view" />

    <TextView
        android:id="@+id/downvote_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="600"
        app:layout_constraintBottom_toBottomOf="@id/upvote_image_view"
        app:layout_constraintStart_toEndOf="@id/downvote_image_view"
        app:layout_constraintTop_toTopOf="@id/upvote_image_view" />

    <ImageView
        android:id="@+id/comment_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/icon_post_comment"
        app:layout_constraintBottom_toBottomOf="@id/upvote_image_view"
        app:layout_constraintStart_toEndOf="@id/downvote_text_view"
        app:layout_constraintTop_toTopOf="@id/upvote_image_view" />

    <TextView
        android:id="@+id/comment_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="600"
        app:layout_constraintBottom_toBottomOf="@id/upvote_image_view"
        app:layout_constraintStart_toEndOf="@id/comment_image_view"
        app:layout_constraintTop_toTopOf="@id/upvote_image_view" />

    <TextView
        android:id="@+id/forward_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2.0W"
        app:layout_constraintBottom_toBottomOf="@id/upvote_image_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/upvote_image_view" />

    <ImageView
        android:id="@+id/forward_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/icon_post_share"
        app:layout_constraintBottom_toBottomOf="@id/upvote_image_view"
        app:layout_constraintEnd_toStartOf="@id/forward_text_view"
        app:layout_constraintTop_toTopOf="@id/upvote_image_view" />

</android.support.constraint.ConstraintLayout>